# hTensor

./: .gitignore  INSTALL  LICENSE  README.md  hTensor.cabal  hTensor.txt
examples/: array.hs  exterior.hs  geom.hs  sfm.hs  testCP.hs
lib/Numeric/LinearAlgebra/: Array.hs  Exterior.hs  Multivector.hs  Tensor.hs
lib/Numeric/LinearAlgebra/Array/: Decomposition.hs  Display.hs  Internal.hs  Simple.hs  Solve.hs  Util.hs
