Name:               hTensor
Version:            0.1.0
License:            GPL
License-file:       LICENSE
Author:             Alberto Ruiz
Maintainer:         Alberto Ruiz <aruiz@um.es>
Stability:          experimental
Homepage:           http://perception.inf.um.es/tensor
Synopsis:           Multidimensional arrays and simple tensor computations.
Description:
 This is an experimental library for multidimensional arrays,
 oriented to support simple tensor computations and multilinear
 algebra.
 .
 Array dimensions have an \"identity\" which is preserved
 in data manipulation. Indices are explicitly selected by name in
 expressions, and Einstein's summation convention for repeated indices
 is automatically applied.
 .
 The library has a purely functional interface: arrays are immutable,
 and operations typically work on whole structures which can be assembled
 and decomposed using simple primitives. Arguments are automatically made conformant
 by replicating them along extra dimensions appearing in an operation.
 There is preliminary support for Geometric Algebra.
 .
 A tutorial can be found in the website of the project.

Category:           Math
tested-with:        GHC ==6.10.3

cabal-version:      >=1.2
build-type:         Simple

extra-source-files: README INSTALL

extra-source-files: examples/array.hs
                    examples/exterior.hs
                    examples/geom.hs

flag splitBase
    description:    Choose the new smaller, split-up base package.

library
    if flag(splitBase)
      build-depends:    base >= 3 && < 5
    else
      build-depends:    base < 3

    Build-Depends:      haskell98, hmatrix >= 0.5, containers

    hs-source-dirs:     lib
    Exposed-modules:    Numeric.LinearAlgebra.Array.Simple
                        Numeric.LinearAlgebra.Array.Util
                        Numeric.LinearAlgebra.Array
                        Numeric.LinearAlgebra.Tensor
                        Numeric.LinearAlgebra.Exterior
                        Numeric.LinearAlgebra.Multivector

    other-modules:      Numeric.LinearAlgebra.Array.Internal

    ghc-prof-options:   -auto-all

    ghc-options:        -Wall
                        -fno-warn-missing-signatures
                        -fno-warn-orphans
