Name:               hTensor
Version:            0.8.0
License:            GPL
License-file:       LICENSE
Author:             Alberto Ruiz
Maintainer:         Alberto Ruiz <aruiz@um.es>
Stability:          experimental
Homepage:           http://perception.inf.um.es/tensor
Synopsis:           Multidimensional arrays and simple tensor computations.
Description:
 This is an experimental library for multidimensional arrays,
 oriented to support simple tensor computations and multilinear
 algebra.
 .
 Array dimensions have an \"identity\" which is preserved
 in data manipulation. Indices are explicitly selected by name in
 expressions, and Einstein's summation convention for repeated indices
 is automatically applied.
 .
 The library has a purely functional interface: arrays are immutable,
 and operations typically work on whole structures which can be assembled
 and decomposed using simple primitives. Arguments are automatically made conformant
 by replicating them along extra dimensions appearing in an operation.
 There is preliminary support for Geometric Algebra and for solving multilinear systems.
 .
 A tutorial can be found in the website of the project.

Category:           Math
tested-with:        GHC ==7.4

cabal-version:      >=1.6
build-type:         Simple

extra-source-files:

flag splitBase
    description:    Choose the new smaller, split-up base package.

library
    if flag(splitBase)
      build-depends:    base >= 3 && < 5
    else
      build-depends:    base < 3

    Build-Depends:      hmatrix >= 0.13, containers, random

    hs-source-dirs:     lib
    Exposed-modules:    Numeric.LinearAlgebra.Array.Util
                        Numeric.LinearAlgebra.Array
                        Numeric.LinearAlgebra.Tensor
                        Numeric.LinearAlgebra.Exterior
                        Numeric.LinearAlgebra.Multivector
                        Numeric.LinearAlgebra.Array.Solve
                        Numeric.LinearAlgebra.Array.Decomposition

    other-modules:      Numeric.LinearAlgebra.Array.Internal
                        Numeric.LinearAlgebra.Array.Display
                        Numeric.LinearAlgebra.Array.Simple

    ghc-prof-options:   -auto-all

    ghc-options:        -Wall
                        -fno-warn-missing-signatures
                        -fno-warn-orphans

source-repository head
    type:     git
    location: https://github.com/AlbertoRuiz/hTensor

